# LLM4Causal-cs338

./: .coverage  .gitignore  LICENSE  MONTE_CARLO_README.md  README.md  entities.json  environment-windows.yml  environment.yml  pyproject.toml  pyproject_old.toml  relationships.json  silk_causal_graph.graphml  test.py
data/article_retrieval/: README.md  article_retriever.py  gcp_connector.py
data/openalex/: manifest.csv  oa_search.csv  pdf_downloader.py
example_pdfs/: 2018_Recombinant_Spidroins_extracted.json
examples/: figures.json  fulltext.tei.xml  gemini_tests.py  gemini_tests_tables.py  grobid_new.py  grobid_setup.py  json2graph.py  parse_figures.py  parse_tables.py  plot_graph.py  process_pdf.ipynb  process_pdf.py  process_pdf_gpt5.py  process_pdf_llama.ipynb  process_pdf_llama.py  process_pdf_mod.py  process_sentences.ipynb  prompt.txt  set_up_table_parser.md  step_parse_tables.py  tables.json
examples/evaluation_visuzalization/: Metric-LLM-basedGraph-Multi-agentGraphOurs.csv  bar_plot.py
examples/output/: combined_graph.graphml  combined_relations.json  sciadv.abo6043_combined_graph.graphml  sciadv.abo6043_combined_relations.json
examples/temp/: figure_relations.json  figure_relations.txt  figure_relations_old.txt  table_relations.json  table_relations.txt  table_relations_old.txt  text_relations.json  text_relations.txt
examples/temp/tables/: sciadv.abo6043-table-1.html
examples/temp/text/: fulltext.tei.xml  text.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
matsci_llm_causality/: __init__.py  schema.py
matsci_llm_causality/models/: __init__.py  scibert.py
src/: .dockerignore  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  README.md  demo_monte_carlo.py  demo_multi_pdf.py  docker-compose.yml  list_models.py  requirements.txt  sandbox.py  test_monte_carlo.py
src/api/: app.py  config.py  job_manager.py  routes.py  schemas.py  worker.py
src/document_preparation/: CLOUD_INFO.md  README.md  TESTING.md  article_retriever.py  gcp_connector.py  parser_adapter.py  pdf_parser_v2.py
src/matsci_llm_causality/: __init__.py  cli.py
src/matsci_llm_causality/extraction/: Ken_PDF_text_Parsing.py  __init__.py  grobid.py  pdf.py
src/matsci_llm_causality/models/: __init__.py  base.py  scibert.py
src/matsci_llm_causality/models/llm/: flan.py  gemini.py  gpt.py  llama.py  monte_carlo_extractor.py
src/matsci_llm_causality/prompts/: __init__.py  entity_consolidation.txt  global_edges_consolidation.txt  global_nodes_consolidation.txt  gpt_system_message.txt  image_relation_extraction.txt  stage1_initial_nodes_consolidation.txt  stage1_initial_nodes_prompt.txt  stage3_expanded_nodes_consolidation.txt  stage3_expanded_nodes_prompt.txt  stage5_relationships_consolidation.txt  stage5_relationships_prompt.txt  table_relation_extraction.txt  text_relation_extraction.txt
src/matsci_llm_causality/schema/: __init__.py
src/matsci_llm_causality/visualization/: __init__.py  graph_renderer.py
src/matsci_llm_causality/workflows/: section_pipeline.py
src/visualizations/: causal_graph_20251120_044146.html  causal_graph_20251120_044146.json  causal_graph_20251120_044146_regen.html
tests/: __init__.py  test_basic.py  test_pdf_processing.py
tests/unit/: __init__.py  test_entity_recognition.py  test_pdf_processing.py
